--- a/site-lucas-sassa/sobre.html
+++ b/site-lucas-sassa/sobre.html
@@ -51,7 +51,7 @@
     </header>
 
     <main> 
-        <section id="principal">
+        <section id="principal-sobre">
             <div class="container">
                 <div class="row col-12 px-5 py-3">                  
                     <div class="col-md-8">                    
